--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body,
+expert-centre,
+expert-centre > section {
+	display: flex;
+	flex: 1 0 auto;
+	align-items: center;
+	justify-content: center;
+}
