--- a/src/app/experts.component.html
+++ b/src/app/experts.component.html
@@ -1,18 +1,22 @@
 <section class="row">
 	<div class="column">
-		<h1>
-		  {{title}}
-		</h1>
+		<h1>Expert Centre</h1>
 		<h2 *ngIf="errorMessage" style="color:red;">ERROR: {{ errorMessage }}</h2>
 
 		<div class="row">
 			<div class="column">
-				<label>Filter
-					<select>
-					  <option *ngFor="let filter of filters" [value]="filter.id">
-					    {{ filter.name }} <strong>({{ filter.count }})</strong>
-					  </option>
-					</select>
+				<label>Filter by industry
+					<ng2-completer [(ngModel)]="industry"
+												 [datasource]="industries"
+												 (selected)="onIndustrySelected($event)"
+												 minSearchLength="0"
+												 clearSelected="true"
+												 openOnFocus="true"
+												 placeholder="E.g. &ldquo;Accounting&rdquo;">
+					</ng2-completer>
+					<div>
+						<span class="label" *ngFor="let industry of industriesSelected">&times; {{ industry.industry_name }}</span>
+					</div>
 				</label>
 			</div>
 			<div class="column">
@@ -23,7 +27,7 @@
 				</label>
 			</div>
 		</div>
-
-		<expert-list></expert-list><!-- [experts]="experts" -->
+		<hr/>
+		<expert-list [filterBy]="industriesSelected"></expert-list><!-- [experts]="experts" -->
 	</div>
 </section>
