--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -153,7 +153,7 @@
 
     <ul class="tabs" data-tab data-options="deep_linking:true" role="tablist">
       <li class="tab-title" role="presentation" *ngFor="let expertise of expert | pick: 'accomplishments':'accreditations':'research_grants':'affiliations':'partnerships' | keys; let i = index;">
-      	<a href="#expertise_panel-{{i}}" role="tab" tabindex="0">{{ (expertise | match: '[^_]+':'g').join(' ') | ucfirst }} <span class="label badge">{{ expert[expertise].length }}</span></a>
+      	<a href="#expertise_panel-{{i}}" role="tab" tabindex="0">{{ (expertise | match: '[^_]+':'g').join(' ') | ucfirst }} <span class="badge">{{ expert[expertise].length }}</span></a>
       </li>
     </ul>
     <div class="tabs-content">
