--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,6 +1,20 @@
-<ul [hidden]="expert" class="no-bullet">
-	<li *ngFor="let expert of experts$ | async | filterBy:['firstname','lastname']:searchBy">
-	  <expert-list-item [expert]="expert" (onShowDetail)="expert$.next($event)"></expert-list-item>
+<router-outlet></router-outlet>
+<ul class="no-bullet">
+	<li *ngFor="let expert of experts | async | filterBy:['firstname','lastname']:searchBy">
+		<div class="media-object">
+			<div class="media-object-section align-self-center">
+			  <a href="javascript:;" (click)="onShowDetail(expert)" class="thumbnail">
+					<img [src]="expert.url">
+			  </a>
+			</div>
+			<div class="media-object-section main-section">
+			  <h4>
+			  	{{ expert.firstname }} {{ expert.lastname }}<br/>
+			  	<small class="subheader">{{ expert.job_title }}</small>
+			  </h4>
+			  <h5>{{ expert.tagline }}</h5>
+			</div>
+		</div>
+
   </li>
 </ul>
-<expert-profile *ngIf="expert" [expert]="expert"></expert-profile>
