🛠 WIP switch data resolving to router-loaded

--- a/src/app/experts.component.html
+++ b/src/app/experts.component.html
@@ -17,6 +17,6 @@
 			</div>
 		</div>
 		<hr/>
-		<expert-list [filterBy]="filter" [searchBy]="search"></expert-list><!-- [experts]="experts" -->
+		<router-outlet></router-outlet>
 	</div>
 </section>
