--- a/src/app/experts.component.html
+++ b/src/app/experts.component.html
@@ -8,7 +8,7 @@
 				<expert-filter-controls (onFilterChanged)="onFilterChanged($event)"></expert-filter-controls>
 			</div>
 			<div class="column">
-				<expert-search-controls></expert-search-controls>
+				<expert-search-controls (onSearchChanged)="onSearchChanged($event)"></expert-search-controls>
 			</div>
 			<div class="column">
 				<expert-sort-controls></expert-sort-controls>
