⚡️ Fill out sort controls component and hook it up

--- a/src/app/experts.component.html
+++ b/src/app/experts.component.html
@@ -11,7 +11,7 @@
 				<expert-search-controls (onSearchChanged)="onSearchChanged($event)"></expert-search-controls>
 			</div>
 			<div class="column">
-				<expert-sort-controls></expert-sort-controls>
+				<expert-sort-controls (onSortChanged)="onSortChanged($event)"></expert-sort-controls>
 			</div>
 		</div>
 		<hr/>
